# cfd-scene-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
scripts/: install_singularity.sh
viewer/: main.cpp
