set(MTS_ENABLE_PYTHON OFF)

# Build nanogui
set(NANOGUI_BUILD_EXAMPLES OFF CACHE BOOL " " FORCE)
set(NANOGUI_BUILD_SHARED   ON  CACHE BOOL " " FORCE)
set(NANOGUI_BUILD_PYTHON   ${MTS_ENABLE_PYTHON} CACHE BOOL " " FORCE)
set(NANOGUI_INSTALL        OFF CACHE BOOL " " FORCE)
set(NANOGUI_PYBIND11_DIR   "${CMAKE_CURRENT_SOURCE_DIR}/pybind11")
add_subdirectory(nanogui)

set_property(TARGET glfw glfw_objects nanogui PROPERTY FOLDER "dependencies")
set(EIGEN_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/nanogui/ext/eigen PARENT_SCOPE)
set(NANOGUI_INCLUDE_DIRS
${CMAKE_CURRENT_SOURCE_DIR}/nanogui/include
${NANOGUI_EXTRA_INCS}
PARENT_SCOPE)
set(NANOGUI_EXTRA_DEFS ${NANOGUI_EXTRA_DEFS} PARENT_SCOPE)

if (MTS_ENABLE_PYTHON)
set_target_properties(nanogui-python nanogui-python-obj PROPERTIES FOLDER "dependencies")
endif()

mark_as_advanced(
  NANOGUI_BUILD_EXAMPLES NANOGUI_BUILD_GLFW
 NANOGUI_BUILD_PYTHON NANOGUI_BUILD_SHARED NANOGUI_INSTALL
 NANOGUI_PYTHON_VERSION NANOGUI_USE_GLAD NANOGUI_USE_GLES2 NANOGUI_USE_OPENGL
 NANOGUI_PYTHON_USE_ENOKI_BINDINGS NANOGUI_BUILD_GLAD
)